--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.10.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "expo-font": "~13.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
